# json-schema

./: .travis.yml  CHANGELOG.md  README.md  json-schema.cabal
examples/: Example.hs
src/Data/JSON/: Schema.hs
src/Data/JSON/Schema/: Combinators.hs  Generic.hs  Types.hs  Validate.hs
tests/: Main.hs
tests/Test/: Util.hs  Validate.hs
