name:                json-schema
version:             0.6
synopsis:            Types and type classes for defining JSON schemas.
description:         Types and type classes for defining JSON schemas.
license:             BSD3
license-file:        LICENSE
author:              Silk
maintainer:          code@silk.co
category:            Data
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:              git
  location:          https://github.com/silkapp/json-schema.git

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Data.JSON.Schema
    Data.JSON.Schema.Combinators
    Data.JSON.Schema.Generic
    Data.JSON.Schema.Types
  build-depends:
      base == 4.*
    , aeson >= 0.6 && < 0.8
    , containers >= 0.3 && < 0.6
    , generic-aeson == 0.1.*
    , generic-deriving == 1.6.*
    , tagged >= 0.2 && < 0.8
    , text >= 0.10 && < 1.2
    , time >= 1.2 && < 1.5
    , unordered-containers == 0.2.*
    , vector == 0.10.*

test-suite json-schema-generic-aeson-tests
  ghc-options:       -Wall
  hs-source-dirs:    tests
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  build-depends:
      base
    , HUnit >= 1.2 && < 1.3
    , aeson
    , attoparsec
    , bytestring >= 0.10 && < 0.12
    , generic-aeson
    , tagged >= 0.2 && < 0.8
    , json-schema
    , tagged >= 0.2 && < 0.8
    , tasty
    , tasty-hunit
    , tasty-th
    , text
