name:                json-schema
version:             0.7.4.1
synopsis:            Types and type classes for defining JSON schemas.
description:         Types and type classes for defining JSON schemas.
                     .
                     /Documentation/
                     .
                     See <https://github.com/silkapp/json-schema/blob/master/README.md>
                     .
license:             BSD3
license-file:        LICENSE
author:              Silk
maintainer:          code@silk.co
category:            Data
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:              git
  location:          https://github.com/silkapp/json-schema.git

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Data.JSON.Schema
    Data.JSON.Schema.Combinators
    Data.JSON.Schema.Generic
    Data.JSON.Schema.Types
    Data.JSON.Schema.Validate
  build-depends:
      base >= 4.4 && < 5
    , aeson >= 0.7 && < 0.11
    , containers >= 0.3 && < 0.6
    , generic-aeson == 0.2.*
    , generic-deriving >= 1.6 && < 1.10
    , mtl >= 2.1 && < 2.3
    , scientific == 0.3.*
    , text >= 0.10 && < 1.3
    , time >= 1.2 && < 1.6
    , unordered-containers == 0.2.*
    , vector >= 0.10 && < 0.12
  -- Data.Proxy.Proxy
  if impl(ghc < 7.8)
    build-depends: tagged >= 0.2 && < 0.9
  -- GHC Generics
  if impl(ghc < 7.6)
    build-depends: ghc-prim == 0.2.*

test-suite json-schema-generic-aeson-tests
  ghc-options:       -Wall
  hs-source-dirs:    tests, examples
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  other-modules:
    Example
    Test.Util
    Test.Validate
  build-depends:
      base >= 4.4 && < 5
    , aeson >= 0.7 && < 0.11
    , aeson-utils >= 0.2 && < 0.4
    , attoparsec >= 0.10 && < 0.14
    , bytestring >= 0.10 && < 0.12
    , generic-aeson == 0.2.*
    , json-schema
    , tasty >= 0.10 && < 0.12
    , tasty-hunit == 0.9.*
    , tasty-th == 0.1.*
    , text >= 0.10 && < 1.3
    , vector >= 0.10 && < 0.12
  if impl(ghc < 7.8)
    build-depends: tagged >= 0.2 && < 0.9
  if impl(ghc < 7.6)
    build-depends: ghc-prim == 0.2.*
