name:                json-schema
version:             0.7.4.2
synopsis:            Types and type classes for defining JSON schemas.
description:         Types and type classes for defining JSON schemas.
                     .
                     /Documentation/
                     .
                     See <https://github.com/silkapp/json-schema/blob/master/README.md>
                     .
license:             BSD3
license-file:        LICENSE
author:              Silk
maintainer:          code@silk.co
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:
    GHC == 7.6.3
  , GHC == 7.8.4
  , GHC == 7.10.3
  , GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.3

extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:              git
  location:          https://github.com/silkapp/json-schema.git

library
  ghc-options:        -Wall
  hs-source-dirs:     src
  default-extensions: NoImplicitPrelude
  default-language:   Haskell2010
  exposed-modules:
    Data.JSON.Schema
    Data.JSON.Schema.Combinators
    Data.JSON.Schema.Generic
    Data.JSON.Schema.Types
    Data.JSON.Schema.Validate
  build-depends:
      base >= 4.4 && < 5
    , base-compat-batteries == 0.10.*
    , aeson >= 0.7 && < 1.5
    , containers >= 0.3 && < 0.6
    , generic-aeson == 0.2.*
    , generic-deriving >= 1.6 && < 1.13
    , mtl >= 2.1 && < 2.3
    , scientific == 0.3.*
    , text >= 0.10 && < 1.3
    , time >= 1.2 && < 1.9
    , unordered-containers == 0.2.*
    , vector >= 0.10 && < 0.13

test-suite json-schema-generic-aeson-tests
  ghc-options:        -Wall
  default-extensions: NoImplicitPrelude
  default-language:   Haskell2010
  hs-source-dirs:     tests, examples
  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  other-modules:
    Example
    Test.Util
    Test.Validate
  build-depends:
      base >= 4.4 && < 5
    , base-compat-batteries == 0.10.*
    , aeson >= 0.9 && < 1.5
    , attoparsec >= 0.10 && < 0.14
    , bytestring >= 0.10 && < 0.12
    , generic-aeson == 0.2.*
    , json-schema
    , tasty >= 0.10 && < 1.2
    , tasty-hunit >= 0.9 && < 0.11
    , tasty-th == 0.1.*
    , text >= 0.10 && < 1.3
    , vector >= 0.10 && < 0.13
